force-app/main/default/objects/Lilly_People__c/Lilly_People__c.object-meta.xml
<CustomObject>
    <label>People</label>
    <nameField>
        <label>People</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peoples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>