force-app/main/default/objects/Lilly_People__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Peoples</relationshipLabel>
    <relationshipName>Peoples</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>