force-app/main/default/objects/Lilly_People__c/fields/Lilly_Assigned_Gender__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Assigned_Gender__c</fullName>
    <label>Assigned Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>