force-app/main/default/objects/Lilly_People__c/fields/Lilly_Citations_Per_Pub__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Citations_Per_Pub__c</fullName>
    <label>Citations Per Pub</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>