force-app/main/default/objects/Lilly_People__c/fields/Lilly_H1_HCP_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_H1_HCP_Id__c</fullName>
    <description>H1 unique identifier for HCP</description>
    <externalId>true</externalId>
    <label>H1 HCP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>