force-app/main/default/objects/Lilly_People__c/fields/Lilly_Languages_Spoken__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Languages_Spoken__c</fullName>
    <label>Languages Spoken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>