force-app/main/default/objects/Lilly_People__c/fields/Lilly_Payments_Total__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Payments_Total__c</fullName>
    <label>Payments Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>