force-app/main/default/objects/Lilly_People__c/fields/Lilly_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>