force-app/main/default/objects/Lilly_People__c/fields/Lilly_Publications_Count__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Publications_Count__c</fullName>
    <label>Publications Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>