force-app/main/default/objects/Lilly_People__c/fields/Lilly_Race__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>