force-app/main/default/objects/Lilly_People__c/fields/Lilly_Range__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Range__c</fullName>
    <label>Range</label>
    <length>10</length>
    <type>Text</type>
</CustomField>