force-app/main/default/objects/Lilly_People__c/fields/Lilly_Referrals_Sent_Total__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Referrals_Sent_Total__c</fullName>
    <label>Referrals Sent Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>