force-app/main/default/objects/Lilly_People__c/fields/Lilly_Social_Media_Mention_Total__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Social_Media_Mention_Total__c</fullName>
    <label>Social Media Mention Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>