force-app/main/default/objects/Lilly_People__c/fields/Lilly_Total_Works__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Total_Works__c</fullName>
    <label>Total Works</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>