force-app/main/default/objects/Lilly_People__c/fields/Lilly_Value__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Value__c</fullName>
    <label>Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>