force-app/main/default/objects/Lilly_People__c/fields/Lilly_Year__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Year__c</fullName>
    <label>Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>