force-app/main/default/objects/Lilly_People__c/fields/OfflineLastModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineLastModifiedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>People</relationshipName>
    <type>Lookup</type>
</CustomField>